--- a/styles/styles.css
+++ b/styles/styles.css
@@ -83,3 +83,7 @@ body {
   width:100%;
   position:absolute;
 }
+
+.image-orcamentos{
+  background-image: url('../images/outras/orcamento-2.png');
+}
